--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   
   # Localization
   easy_localization: ^3.0.5
+  supabase_flutter: ^2.12.0
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +45,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/cards/
     - assets/sounds/
     - assets/music/
     - assets/translations/
