--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:label="El-Shayeb"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
+            android:allowBackup="false"
+
         android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
