--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  rename : ^3.1.0
   flutter_launcher_icons: "^0.14.4"
   flutter_native_splash: "^2.0.1"
 flutter:
@@ -51,11 +52,14 @@ flutter:
     - assets/translations/
 flutter_launcher_icons:
   android: "launcher_icon"
-  # ios: true
+  ios: true
   image_path: "assets/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
+  adaptive_icon_background : "#ffffff"
+  adaptive_icon_foreground : "assets/logo.png"
+
   web:
-    generate: true
+    generate: false
     image_path: "assets/logo.png"
     background_color: "#ffffff"
     theme_color: "#ffffff"
