--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Localization
   easy_localization: ^3.0.5
   supabase_flutter: ^2.12.0
+  firebase_crashlytics: ^4.1.0
+  firebase_core: ^3.4.0
 
 dev_dependencies:
   flutter_test:
